--- a/project-2/index.html
+++ b/project-2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    hi this is 3rd file 
+    hi this is 3rd file git add <div class=""></div>
 </body>
 </html>
